Apply Java modernization idioms across the codebase
Replace String.format() with String.formatted() and apply
instanceof pattern matching to align with the established
conventions already used throughout the project.

Signed-off-by: eunseo9311 <eunseo9311@gmail.com>
Signed-off-by: Eunseo Song <162149585+eunseo9311@users.noreply.github.com>