@@ -54,7 +54,7 @@ class GradleWrapperContributorTests {
 	private Consumer<Path> isNotExecutable() {
 		return (path) -> {
 			if (supportsExecutableFlag() && Files.isExecutable(path)) {
-				throw Failures.instance().failure(String.format("%nExpecting:%n  <%s>%nto not be executable.", path));
+				throw Failures.instance().failure("%nExpecting:%n  <%s>%nto not be executable.".formatted(path));
 			}
 		};
 	}
