@@ -57,7 +57,7 @@ class JvmModuleAssertTests {
 		createFile(root, "src/main/java/com/example/Test.other");
 		assertThatExceptionOfType(AssertionError.class)
 			.isThrownBy(() -> assertThat(forJavaProject(root)).hasMainSource("com.example", "Test"))
-			.withMessageContaining(String.format("Source '%s' not found in package '%s'", "Test.java", "com.example"));
+			.withMessageContaining("Source '%s' not found in package '%s'".formatted("Test.java", "com.example"));
 	}
 
 	@Test
@@ -65,7 +65,7 @@ class JvmModuleAssertTests {
 		createFile(root, "src/main/groovy/com/example/Test.java");
 		assertThatExceptionOfType(AssertionError.class)
 			.isThrownBy(() -> assertThat(forJavaProject(root)).hasMainSource("com.example", "Test"))
-			.withMessageContaining(String.format("Source '%s' not found in package '%s'", "Test.java", "com.example"));
+			.withMessageContaining("Source '%s' not found in package '%s'".formatted("Test.java", "com.example"));
 	}
 
 	@Test
@@ -109,7 +109,7 @@ class JvmModuleAssertTests {
 		createFile(root, "src/test/java/com/example/Test.other");
 		assertThatExceptionOfType(AssertionError.class)
 			.isThrownBy(() -> assertThat(forJavaProject(root)).hasTestSource("com.example", "Test"))
-			.withMessageContaining(String.format("Source '%s' not found in package '%s'", "Test.java", "com.example"));
+			.withMessageContaining("Source '%s' not found in package '%s'".formatted("Test.java", "com.example"));
 	}
 
 	@Test
@@ -117,7 +117,7 @@ class JvmModuleAssertTests {
 		createFile(root, "src/test/groovy/com/example/Test.java");
 		assertThatExceptionOfType(AssertionError.class)
 			.isThrownBy(() -> assertThat(forJavaProject(root)).hasTestSource("com.example", "Test"))
-			.withMessageContaining(String.format("Source '%s' not found in package '%s'", "Test.java", "com.example"));
+			.withMessageContaining("Source '%s' not found in package '%s'".formatted("Test.java", "com.example"));
 	}
 
 	@Test
